Reset Files to Base

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -12,12 +12,14 @@
         <meta name="format-detection" content="telephone=no">
         
         <link rel="icon" href="/static/images/favicon.ico"> 
-        <link href="/static/css/style.css" rel="stylesheet" type="text/css">
+        <!--<link href="/static/css/style.css" rel="stylesheet" type="text/css">-->
         <link href="/static/css/ui-lightness/jquery-ui.min.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
-         <div id="viewport"></div>
+         <div id="viewport">
+            Hello World, If you see this the server should be working properly
+         </div>
     </body>
 
     <script src="/static/js/lib/jquery.min.js"></script>
@@ -39,13 +41,4 @@
     <script src="/static/js/view.js"></script>
 
     <script src="/static/js/controller.js"></script>
-
-
-    <script src="/static/js/lightdata.js"></script>
-    <script src="/static/js/pvdata.js"></script>
-    <script src="/static/js/devicesdata.js"></script>
-    <script src="/static/js/waterdata.js"></script>
-    <script src="/static/js/blindsdata.js"></script>
-
-    <script src="/static/js/collections-prod.js"></script>
 </html>
