Added wikimedia scraping to rawtext, methods are not perfect but it is the best I could do without building an autamaton. Could us some failure protection

--- a/server/templates/test.html
+++ b/server/templates/test.html
@@ -54,7 +54,7 @@
 
           $(searchresults).each(function(i,result){
             console.log(result)
-            var datum = $('<a href="' + result.title + '"><li>'+ result.title + '</li></a>')
+            var datum = $('<li><a href="' + result.title + '">'+ result.title + '</a></li>')
             $('#searchresults').append( datum);
           });
         }
