--- a/server/static/css/wikigraph.css
+++ b/server/static/css/wikigraph.css
@@ -3,11 +3,17 @@
 	height: 100%;
 	background-color: rgba(40,40,40,1);
 	float:left;
+	overflow: hidden;
 }
 
-#wikiNodeWrapper{
+.wikiNodeWrapper{
+	display: none;
+}
+
+#wikiDetailWrapper{
 	width: 30%;
 	height: 100%;
 	background-color: rgba(240,240,240,1);
 	float:right;
+	z-index: 1000;
 }
