--- a/server/static/css/wikinode.css
+++ b/server/static/css/wikinode.css
@@ -4,12 +4,10 @@
 }
 
 .wikiNode{
-	background-color: rgba(240,240,240,1);
+	background-color: rgba(0,0,0,1);
+	position: absolute;
 
-  	text-align: center;
-    text-overflow: ellipsis;
-
-    margin: 26% auto 0 auto;
+    margin: 0 auto 0 auto;
 }
 
 .backgroundFilter{
@@ -17,19 +15,35 @@
 	height: 100%;
     width: 100%;
 	overflow: hidden;
+	position: relative;
 }
 
 .nodeTitleWrapper{
-
+	text-align: center;
+    text-overflow: ellipsis;
 }
 
 .linkText{
 	width: 100%;
-
+	text-shadow: -1px 0 rgba(40,40,40,1), 0 1px rgba(40,40,40,1), 1px 0 rgba(40,40,40,1), 0 -1px rgba(40,40,40,1);
 	display: inline-block;
     vertical-align: middle;
     line-height: normal;
     font-family: 'Lato-bold';
     font-size:  10px;
+    color: whitesmoke;
 	word-wrap:break-word;
+}
+
+.contextSentence{
+	background-color: rgba(40,40,40,0.5);
+	position: absolute;
+	top: 150px;
+	left: 0;
+    text-overflow: ellipsis;
+	width: 100%;
+    height: 100%;
+    font-family: 'Lato-light';
+    font-size:  12px;
+    color: whitesmoke;
 }
